--- a/package.json
+++ b/package.json
@@ -9,17 +9,23 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroicons/react": "^2.0.18",
+    "firebase": "^10.7.1",
+    "next": "13.5.6",
+    "next-auth": "^4.24.5",
+    "openai": "^4.20.1",
     "react": "^18",
     "react-dom": "^18",
-    "next": "13.5.6"
+    "react-firebase-hooks": "^5.1.1",
+    "react-hot-toast": "^2.4.1"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10",
     "postcss": "^8",
-    "tailwindcss": "^3"
+    "tailwindcss": "^3",
+    "typescript": "^5"
   }
 }
