--- a/package.json
+++ b/package.json
@@ -11,13 +11,16 @@
   "dependencies": {
     "@heroicons/react": "^2.0.18",
     "firebase": "^10.7.1",
+    "firebase-admin": "^12.0.0",
     "next": "13.5.6",
     "next-auth": "^4.24.5",
     "openai": "^4.20.1",
     "react": "^18",
     "react-dom": "^18",
     "react-firebase-hooks": "^5.1.1",
-    "react-hot-toast": "^2.4.1"
+    "react-hot-toast": "^2.4.1",
+    "react-select": "^5.8.0",
+    "swr": "^2.2.4"
   },
   "devDependencies": {
     "@types/node": "^20",
